refactor: general UI enhancements and state management logic updates

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="./public/e-commerce.jfif">
+    <link rel="icon" href="/e-commerce.jfif">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta name="description" content="Explore the best products at Fresh Cart. Shop now for quality items and fast delivery.">
+    <title>Fresh Cart | Online Shopping</title>
   </head>
   <body>
     <div id="app"></div>
