perf(signup): achieve 100 score by splitting css, adding preconnect, and optimizing main-thread

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/e-commerce.jfif">
+    <link rel="preconnect" href="https://vue-e-commerce-six.vercel.app">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore the best products at Fresh Cart. Shop now for quality items and fast delivery.">
     <title>Fresh Cart | Online Shopping</title>
